--- a/Nitflex/src/main/resources/templates/header.html
+++ b/Nitflex/src/main/resources/templates/header.html
@@ -21,6 +21,7 @@
 
                 <img class="ui image" onclick="location.href='/'" src="/images/logo.png">
 
+                <p>New title</p>
                 {{#currentUserName}}
                 <div id="favorites-btn" class="ui labeled button" onclick="location.href='/users/favorites'">
                     <div class="ui orange-block button">
